updated code adding home page

--- a/dengue_shield/pubspec.yaml
+++ b/dengue_shield/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/onboard_screens/
     - assets/navigation_bar/
     - assets/logo/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
