--- a/dengue_shield/pubspec.yaml
+++ b/dengue_shield/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.0
+  dotted_border: ^2.1.0
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
