--- a/dengue_shield/pubspec.yaml
+++ b/dengue_shield/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.1.0
   location: ^5.0.3
+  shared_preferences: ^2.2.2
+  http: ^1.1.0
+  flutter_markdown: ^0.6.18
   google_maps_flutter: ^2.10.1
 
 dev_dependencies:
