--- a/dengue_shield/pubspec.yaml
+++ b/dengue_shield/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/navigation_bar/
     - assets/logo/
     - assets/icons/
+    - assets/gif/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
