--- a/dengue_shield/pubspec.yaml
+++ b/dengue_shield/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.20.2
   file_picker: ^10.3.1
   qr_flutter: ^4.1.0
+  progress_dialog_null_safe: ^3.0.0
 
 
 dev_dependencies:
