add docker compose

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,9 @@
+DB_USER=app_user
+DB_PASSWORD=app_password_here
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
 DB_NAME=appointments_db
 
-mongodb+srv://lkjlasitha:4jNvZ2t6c.dJ8X_@cluster0.o4x0p.mongodb.net/
-
-EMAIL_USER=besthings4u101@gmail.com
+EMAIL_USER=@gmail.com
 EMAIL_PASS=rdqa boxb sryp nzac
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
